--- a/package.json
+++ b/package.json
@@ -81,7 +81,9 @@
     "typescript": "5.2.2",
     "uuid": "^11.1.0",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "three": "^0.169.0",
+    "@types/three": "^0.169.0"
   },
   "devDependencies": {},
   "engines": { "node": "^20.0.0" }
