--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "typecheck": "tsc --noEmit",
     "db:setup": "node scripts/apply-mysql-schema.js",
     "db:migrate": "node scripts/run-migrations.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.10",
     "@google/generative-ai": "^0.11.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
@@ -41,8 +43,6 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@supabase/supabase-js": "^2.47.10",
-    "@types/bcryptjs": "^2.4.6",
     "@types/leaflet": "^1.9.20",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
@@ -63,17 +63,16 @@
     "mysql2": "^3.14.4",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
-    "nodemailer": "^6.9.13",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-leaflet": "^4.2.1",
-    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.3",
-    "recharts": "^2.15.4",
+    "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
+    "recharts": "^2.15.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
@@ -82,9 +81,18 @@
     "uuid": "^11.1.0",
     "vaul": "^0.9.9",
     "zod": "^3.23.8",
-    "three": "^0.169.0",
-    "@types/three": "^0.169.0"
+    "nodemailer": "^6.9.13",
+    "three": "^0.168.0"
   },
-  "devDependencies": {},
-  "engines": { "node": "^20.0.0" }
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/leaflet": "^1.9.20",
+    "@types/node": "20.6.2",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
+    "@types/three": "^0.167.2"
+  },
+  "engines": {
+    "node": "^20.0.0"
+  }
 }
